4_nginx-ingress-local-dns/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1 # We start with 1, we will scale later
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: my-api:v1      # The image we built
        imagePullPolicy: Never # CRITICAL for local dev
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort # Expose to outside world (sort of)
  selector:
    app: api
  ports:
    - port: 8000      # Internal Port
      targetPort: 8000 # Container Port
      nodePort: 30001  # External Access Port
