4_nginx-ingress-local-dns/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    # Tell K8s to use the Nginx controller we just enabled
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: async.local  # 1. We define a fake domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service  # 2. Forward to our existing Service
            port:
              number: 8000     # 3. On the internal container port
